structur change and first GUI experiments

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,11 @@
 /dbIngredients/
-/recipeClasses/
+/dbQuery/
 /dbMeasurement/
-/dbImage/
 /dbPreparation/
 /dbRecipe/
+/RecipeImage/
+/RecipeIngredient/
+/RecipePreparation/
 /dbUtil/
+/recipeClasses/
+/Application.fxml
